--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "wdio",
+    "cleandir": "cleandir ./reports/allure-results",
+    "test": "npm run cleandir && wdio",
     "allure-report": "node_modules/.bin/allure generate --clean ./reports/allure-results && allure open",
     "junit-report": "node_modules/.bin/junit-viewer --results=./reports/junit-results --save=./reports/junit-results.html && start ./reports/junit-results.html"
   },
@@ -27,6 +28,7 @@
     "@wdio/spec-reporter": "^5.16.15",
     "@wdio/sync": "^5.16.15",
     "chai": "^4.2.0",
+    "clean-dir": "^1.0.3",
     "glob": "^7.1.6",
     "node-fetch": "^2.6.0",
     "sync-fetch": "^0.1.1"
